# crucible

./: CONTRIBUTING.md  RELEASE_CHECKLIST.md
backend/: Cargo.toml  PERMISSIONS_IMPLEMENTATION.md  README.md
backend/migrations/: 20260430000000_permissions.sql
backend/src/: error.rs  jobs.rs  lib.rs  main.rs
backend/src/api/handlers/: dashboard.rs  mod.rs  profiling.rs
backend/src/api/middleware/: mod.rs  permissions.rs
backend/src/config/: mod.rs  reload.rs
backend/src/services/: mod.rs
backend/src/workers/: mod.rs  scheduler.rs
backend/tests/: permissions_tests.rs
contracts/crucible/: Cargo.toml
contracts/crucible/src/: env.rs  token.rs
contracts/treasury/src/: lib.rs
contracts/treasury/tests/: treasury_test.rs
examples/vesting/src/: lib.rs
frontend/src/: App.css  App.tsx
