[package]
name = "backend"
version = "0.1.0"
edition = "2021"
description = "Backend API server for the Crucible smart contract testing platform"
license = "MIT"

[[bin]]
name = "backend"
path = "src/main.rs"

[[bin]]
name = "backup"
path = "src/bin/backup.rs"

[[bench]]
name = "performance"
harness = false

[[bench]]
name = "dashboard_bench"
harness = false

[features]
testutils = ["mockall"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "request-id"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }

# Redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = { version = "0.24", features = ["trace"] }
opentelemetry-otlp = { version = "0.17", features = ["trace", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.24", features = ["trace", "rt-tokio"] }
tracing-opentelemetry = "0.25"
tonic = "0.12"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
thiserror = "1"
anyhow = "1"
arc-swap = "1.7"
async-trait = "0.1"
base64 = "0.22"
validator = { version = "0.19", features = ["derive"] }
rust_decimal = { version = "1.35", features = ["serde"] }
stellar-xdr = { version = "21.0", features = ["std"] }
utoipa = { version = "5.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8.0", features = ["axum"] }
apalis = { version = "0.6" }
apalis-redis = "0.6"
tower_governor = "0.4"
mockall = { version = "0.13", optional = true }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace"] }
hyper = { version = "1.0", features = ["full"] }
mime = "0.3"
tokio = { version = "1", features = ["full", "test-util"] }
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"
mockall = "0.13"
rust_decimal_macros = "1.35"
criterion = { version = "0.5", features = ["async_tokio"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
